# rocket-diesel-postgresql

./: .env  Cargo.toml  Dockerfile  README.MD  apiserver.tld.service  docker-compose.yml
migrations/2021-04-11-083433_create_posts/: down.sql  up.sql
src/: connection.rs  main.rs  sample.rs  schema.rs  test.rs
src/sample/: handler.rs  model.rs  repository.rs  router.rs
